update go coded and confluence and java gc